[tool.poetry]
name = "test"
version = "0.1.0"
description = "test litestar project"
authors = ["Dmitry Tsmyh <tsmyh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = ">=1.1.0,<2.0.0"
litestar = {extras = ["standard"], version = ">=2.15.2,<3.0.0"}
litestar-granian = ">=0.12.2,<0.13.0"
litestar-asyncpg = ">=0.3.0,<0.4.0"
advanced-alchemy = ">=1.3.2,<2.0.0"
msgspec = ">=0.19.0,<0.20.0"
pydantic = ">=2.11.3,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
